--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Gonzalo Segovia | WDD 130</title>
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
     <header>
