--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Gonzalo Segovia | WDD 130</title>
+    <meta name="description" content="Gonzalo Segovia - Homepage for the web development course. Personal project with HTML and CSS.">
+    <meta name="author" content="Gonzalo Segovia">
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
@@ -20,6 +22,11 @@
           playing role-playing video games with my friends and collecting cards.
           I'm currently studying web design and development at BYU. Sometimes I struggle
           to learn things, but I try hard to keep up. I'm excited to see where all this will take me.</p>
+    <aside>
+        <h2>Antofagasta</h2>
+        <img src="images/portada.jpg" alt="La Portada">
+        <p>Antofagasta is a region of Chile. In Chile, we don't have 'states'. It is located in the north of Chile near the desert. It is a coastal city where one of the largest populations in the country is concentrated. It has some natural monuments such as 'La Portada'.</p>
+    </aside>
     </main>
     <footer>
         <p>©2025 💻 Gonzalo Segovia 💻 Antofagasta, Chile</p>
