--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <aside>
         <h2>Antofagasta</h2>
         <img src="images/portada.jpg" alt="La Portada">
-        <p>Antofagasta is a region of Chile. In Chile, we don't have 'states'. It is located in the north of Chile near the desert. It is a coastal city where one of the largest populations in the country is concentrated. It has some natural monuments such as 'La Portada'.</p>
+        <p>Antofagasta is a region of Chile. In Chile, we don't have 'states'. 
+           It is located in the north of Chile near the desert. 
+           It is a coastal city where one of the largest populations in the country is concentrated. 
+           It has some natural monuments such as 'La Portada'.</p>
     </aside>
     </main>
     <footer>
