--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gonzalo Segovia | WDD 130</title>
     <meta name="description" content="Gonzalo Segovia - Homepage for the web development course. Personal project with HTML and CSS.">
     <meta name="author" content="Gonzalo Segovia">
-    <link rel="stylesheet" href="Styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
