--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,7 +17,7 @@
   </header>
 
   <main>
-    <h1>About The Rapids Rafting</h1>
+    <h1>About Dry Oar Rafting</h1>
 
     <section class="history">
       <h2>Our History</h2>
