--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - Dry Oar Rafting</title>
+  <title>About Us - The Rapids Rafting</title>
   <link rel="stylesheet" href="styles/rafting.css" />
 </head>
 <body>
@@ -17,7 +17,7 @@
   </header>
 
   <main>
-    <h1>About Dry Oar Rafting</h1>
+    <h1>About The Rapids Rafting</h1>
 
     <section class="history">
       <h2>Our History</h2>
