--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us - The Rapids Rafting</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/rafting.css" />
 </head>
 <body>
@@ -12,13 +16,17 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
+      <a href="trips.html">Trips</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
     <h1>About The Rapids Rafting</h1>
-
+    <div class="hero">
+      <img src="images/hero.jpg" alt="Rafting Hero Image" />
+      <h1>Adventure Awaits!</h1>
+    </div>
     <section class="history">
       <h2>Our History</h2>
       <p>
