--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home - The Rapids Rafting</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/rafting.css" />
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="The Rapids Logo" width="120" />
+    <img src="images/logo.jpg" alt="The Rapids Logo" width="120" />
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
+      <a href="trips.html">Trips</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -19,7 +24,7 @@
   <main>
     <h1>Welcome to The Rapids Rafting</h1>
     <p>Adventure awaits! Explore our rafting trips and make memories that last a lifetime.</p>
-    <img src="images/rapids.jpg" alt="Rafting Adventure" style="width: 100%; border-radius: 8px; margin-top: 1rem;" />
+    <img src="images/logo.jpg" alt="Rafting Adventure" style="width: 100%; border-radius: 8px; margin-top: 1rem;" />
   </main>
 
   <footer>
