--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Learn more about The Rapids Rafting company, our history, mission, and what makes our river adventures unforgettable.">
+  <meta name="author" content="Gonzalo Segovia">
   <title>About Us - The Rapids Rafting</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
