--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Learn more about The Rapids Rafting company, our history, mission, and what makes our river adventures unforgettable.">
+  <meta name="description" content="This page provides information about The Rapids, including our history, mission, and the thrilling adventures we offer.">
   <meta name="author" content="Gonzalo Segovia">
-  <title>About Us - The Rapids Rafting</title>
+  <title>About Us - The Rapids </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
   </header>
 
   <main>
-    <h1>About The Rapids Rafting</h1>
+    <h1>About The Rapids </h1>
     <div class="hero">
       <img src="images/hero.jpg" alt="Rafting Hero Image" />
       <h1>Adventure Awaits!</h1>
