--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home - The Rapids Rafting</title>
+  <title>Home - The Rapids </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
   </header>
 
   <main>
-    <h1>Welcome to The Rapids Rafting</h1>
+    <h1>Welcome to The Rapids </h1>
     <p>Adventure awaits! Explore our rafting trips and make memories that last a lifetime.</p>
     <img src="images/logo.jpg" alt="Rafting Adventure" style="width: 100%; border-radius: 8px; margin-top: 1rem;" />
   </main>
