--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,7 @@
   <main>
     <h1>About The Rapids </h1>
     <div class="hero">
-      <img src="images/hero.jpg" alt="Rafting Hero Image" />
+      <img src="images/hero1.jpg" alt="Rafting Hero Image" />
       <h1>Adventure Awaits!</h1>
     </div>
     <section class="history">
