--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <img src="images/rapids.jpg" alt="The Rapids" width="120" />
+    <img src="images/logo.jpg" alt="The Rapids" width="120" />
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
