--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,8 +26,14 @@
   <main>
     <h1>About The Rapids </h1>
     <div class="hero">
-      <img src="images/hero1.jpg" alt="Rafting hero image" />
-      <h1>Adventure Awaits!</h1>
+      <img src="images/hero2.jpg" alt="Rafting hero image" />
+      <h1>The Rapids !</h1>
+      <article>
+        <img src="images/hero1.jpg" alt="article">
+        <p>
+          Exciting adventure to enjoy with the family, change your day by visiting our facilities to live beautiful and fun moments with beautiful landscapes around you.
+        </p>
+      </article>
     </div>
     <section class="history">
       <h2>Our History</h2>
@@ -48,6 +54,33 @@
         </p>
       </div>
     </section>
+    <section>
+      <h2>Adventure Awaits You!</h2>
+      <img src="images/image1.jpg" alt="">
+       <p>
+        ideal for strengthening bonds of trust
+      </p>
+      <img src="images/image2.jpg" alt="">
+       <p>
+        calm waters for beginners
+      </p>
+      <img src="images/image3.jpg" alt="">
+       <p>
+        intermediate challenges to gain experience
+      </p>
+      <img src="images/image4.jpg" alt="">
+       <p>
+        rapids for the more experienced
+      </p>
+      <img src="images/image5.jpg" alt="">
+       <p>
+        incredible challenges for the most daring
+      </p>
+      <img src="images/image6.jpg" alt="friends">
+      <p>
+        complete challenges with friends
+      </p>
+    </section>
 
     <section class="adventures">
       <h2>Why Choose The Rapids?</h2>
@@ -63,6 +96,17 @@
   <footer>
     <p>©2025 Gonzalo Segovia. All rights reserved.</p>
     <p><a href="site-plan-rafting.html">Rafting Site Plan</a></p>
+    <nav class="socialmedia">
+      <a href="https://facebook.com">
+        <img src="images/facebook.webp">
+      </a>
+      <a href="https://instagram.com">
+        <img src="images/instagram.webp">
+      </a>
+      <a href="https://twitter.com">
+        <img src="images/twitter.webp">
+      </a>
+    </nav>
   </footer>
 </body>
 </html>
