--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This page provides information about The Rapids, including our history, mission, and the thrilling adventures we offer.">
   <meta name="author" content="Gonzalo Segovia">
   <title>About Us - The Rapids </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/rafting.css" />
+  <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
   <header>
-    <img src="images/logo.jpg" alt="The Rapids" width="120" />
+    <img src="images/logo.jpg" alt="The Rapids" width="120">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
@@ -26,7 +25,7 @@
   <main>
     <h1>About The Rapids </h1>
     <div class="hero">
-      <img src="images/hero2.jpg" alt="Rafting hero image" />
+      <img src="images/hero2.jpg" alt="Rafting hero image">
       <h1>The Rapids !</h1>
       <article>
         <img src="images/hero1.jpg" alt="article">
@@ -47,7 +46,7 @@
     <section class="image-text">
       <h2>Experience the Wild</h2>
       <div class="grid">
-        <img src="images/rafting6.jpg" alt="Rafting on the river" />
+        <img src="images/rafting6.jpg" alt="Rafting on the river">
         <p>
           Our guides are certified professionals with years of experience.
           Whether you're a beginner or an adrenaline junkie, we have the perfect trip for you.
@@ -56,23 +55,23 @@
     </section>
     <section>
       <h2>Adventure Awaits You!</h2>
-      <img src="images/image1.jpg" alt="">
+      <img src="images/image1.jpg" alt="waters for beginners">
        <p>
         ideal for strengthening bonds of trust
       </p>
-      <img src="images/image2.jpg" alt="">
+      <img src="images/image2.jpg" alt="waters for beginners">
        <p>
         calm waters for beginners
       </p>
-      <img src="images/image3.jpg" alt="">
+      <img src="images/image3.jpg" alt="waters for advanced">
        <p>
         intermediate challenges to gain experience
       </p>
-      <img src="images/image4.jpg" alt="">
+      <img src="images/image4.jpg" alt="waters for advanced">
        <p>
         rapids for the more experienced
       </p>
-      <img src="images/image5.jpg" alt="">
+      <img src="images/image5.jpg" alt="waters for experts">
        <p>
         incredible challenges for the most daring
       </p>
@@ -98,13 +97,13 @@
     <p><a href="site-plan-rafting.html">Rafting Site Plan</a></p>
     <nav class="socialmedia">
       <a href="https://facebook.com">
-        <img src="images/facebook.webp">
+        <img src="images/facebook.webp" alt="facebook icon">
       </a>
-      <a href="https://instagram.com">
-        <img src="images/instagram.webp">
+      <a href="https://instagram.com ">
+        <img src="images/instagram.webp" alt="instagram icon">
       </a>
       <a href="https://twitter.com">
-        <img src="images/twitter.webp">
+        <img src="images/twitter.webp" alt="twitter icon">
       </a>
     </nav>
   </footer>
