--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,10 +25,10 @@
   <main>
     <h1>About The Rapids </h1>
     <div class="hero">
-      <img src="images/hero2.jpg" alt="Rafting hero image">
+      <img src="images/hero2.jpg" alt="main background image">
       <h1>The Rapids !</h1>
       <article>
-        <img src="images/hero1.jpg" alt="article">
+        <img src="images/hero1.jpg" alt="interior image of hero2">
         <p>
           Exciting adventure to enjoy with the family, change your day by visiting our facilities to live beautiful and fun moments with beautiful landscapes around you.
         </p>
@@ -75,7 +75,7 @@
        <p>
         incredible challenges for the most daring
       </p>
-      <img src="images/image6.jpg" alt="friends">
+      <img src="images/image6.jpg" alt="achieving goals with friends">
       <p>
         complete challenges with friends
       </p>
