--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="This page provides information about The Rapids, including our history, mission, and the thrilling adventures we offer.">
+  <meta name="description" content="Discover The Rapids — our story, mission, and exciting rafting adventures designed to thrill and inspire. Join us for unforgettable experiences on the water!.">
   <meta name="author" content="Gonzalo Segovia">
-  <title>About Us - The Rapids </title>
+  <title>What is The Rapids? </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
