--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="The Rapids Logo" width="120" />
+    <img src="images/logo.jpg" alt="The Rapids Logo" width="120" />
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
