--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Discover The Rapids — our story, mission, and exciting rafting adventures designed to thrill and inspire. Join us for unforgettable experiences on the water!.">
-  <meta name="author" content="Gonzalo Segovia">
+  <meta name="author" content="Gonzalo Fabian Segovia Segovia">
   <title>What is The Rapids? </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
