--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,8 +22,7 @@
     </nav>
   </header>
 
-  <main>
-    <h1>About The Rapids </h1>
+  <main class="container">
     <div class="hero">
       <img src="images/hero2.jpg" alt="main background image">
       <h1>The Rapids !</h1>
@@ -53,32 +52,31 @@
         </p>
       </div>
     </section>
-    <section>
+    
+    <section class="adventure-section">
       <h2>Adventure Awaits You!</h2>
-      <img src="images/image1.jpg" alt="waters for beginners">
-       <p>
-        ideal for strengthening bonds of trust
-      </p>
-      <img src="images/image2.jpg" alt="waters for beginners">
-       <p>
-        calm waters for beginners
-      </p>
-      <img src="images/image3.jpg" alt="waters for advanced">
-       <p>
-        intermediate challenges to gain experience
-      </p>
-      <img src="images/image4.jpg" alt="waters for advanced">
-       <p>
-        rapids for the more experienced
-      </p>
-      <img src="images/image5.jpg" alt="waters for experts">
-       <p>
-        incredible challenges for the most daring
-      </p>
-      <img src="images/image6.jpg" alt="achieving goals with friends">
-      <p>
-        complete challenges with friends
-      </p>
+      <div class="adventure-gallery">
+        <figure>
+          <img src="images/image1.jpg" alt="waters for beginners">
+          <figcaption>ideal for strengthening bonds of trust</figcaption>
+        </figure>
+        <figure>
+          <img src="images/image2.jpg" alt="waters for beginners">
+          <figcaption>calm waters for beginners</figcaption>
+        </figure>
+        <figure>
+          <img src="images/image3.jpg" alt="waters for advanced">
+          <figcaption>intermediate challenges to gain experience</figcaption>
+        </figure>
+        <figure>
+          <img src="images/image4.jpg" alt="waters for advanced">
+          <figcaption>rapids for the more experienced</figcaption>
+        </figure>
+        <figure>
+          <img src="images/image6.jpg" alt="achieving goals with friends">
+          <figcaption>complete challenges with friends</figcaption>
+        </figure>
+      </div>
     </section>
 
     <section class="adventures">
@@ -93,7 +91,7 @@
   </main>
 
   <footer>
-    <p>©2025 Gonzalo Segovia. All rights reserved.</p>
+    <p>©2025 The Rapids Gonzalo Segovia. All rights reserved.</p>
     <p><a href="site-plan-rafting.html">Rafting Site Plan</a></p>
     <nav class="socialmedia">
       <a href="https://facebook.com">
