--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,11 +14,13 @@
 <body>
   <header>
     <img src="images/logo.jpg" alt="The Rapids" width="120">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="trips.html">Trips</a>
-      <a href="contact.html">Contact</a>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="trips.html">Trips</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>  
     </nav>
   </header>
 
@@ -29,23 +31,20 @@
       <article>
         <img src="images/hero1.jpg" alt="interior image of hero2">
         <p>
-          Exciting adventure to enjoy with the family, change your day by visiting our facilities to live beautiful and fun moments with beautiful landscapes around you.
+          Exciting adventure to share with family or friends, different levels for beginners or experienced rafters, we have the perfect route for you, change your day by joining us in our facilities with our team and our beautiful landscapes.
         </p>
       </article>
     </div>
+  
     <section class="history">
-      <h2>Our History</h2>
-      <p>
+      <h2>Experience the Wild</h2>
+      <div class="history-content">
+        <p>
         The Rapids Rafting has been guiding adventurers through the most exciting rivers since 1998.
         What began as a small family operation has grown into one of the most trusted rafting companies in the region.
         We believe in safety, fun, and creating unforgettable memories on the water.
       </p>
-    </section>
-
-    <section class="image-text">
-      <h2>Experience the Wild</h2>
-      <div class="grid">
-        <img src="images/rafting6.jpg" alt="Rafting on the river">
+        <img src="images/rafting6.jpg" alt="Rafting on the river" class="history-img">
         <p>
           Our guides are certified professionals with years of experience.
           Whether you're a beginner or an adrenaline junkie, we have the perfect trip for you.
@@ -77,16 +76,6 @@
           <figcaption>complete challenges with friends</figcaption>
         </figure>
       </div>
-    </section>
-
-    <section class="adventures">
-      <h2>Why Choose The Rapids?</h2>
-      <ul>
-        <li>✔ Certified professional guides</li>
-        <li>✔ Scenic routes with wildlife and waterfalls</li>
-        <li>✔ Safety-focused and family-friendly</li>
-        <li>✔ Custom tours for groups and events</li>
-      </ul>
     </section>
   </main>
 
