--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contact page for The Rapids, including team presentation, company information, and a contact form.">
+  <meta name="author" content="Gonzalo Segovia">
   <title>Contact - The Rapids </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
