--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,7 +39,7 @@
             <p><strong>Keith Hartcourt</strong><br>Reservation Specialist</p>
           </div>
           <div class="employee">
-            <img src="images/marcelo-antelayen.png" alt="Marcelo Antelayen - Customer Experience Manager" />
+            <img src="images/marcelo-antelayen.jpg" alt="Marcelo Antelayen - Customer Experience Manager" />
             <p><strong>Marcelo Antelayen</strong><br>Customer Experience Manager</p>
           </div>
         </div>
