--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Discover The Rapids — our story, mission, and exciting rafting adventures designed to thrill and inspire. Join us for unforgettable experiences on the water!.">
+  <meta name="author" content="Gonzalo Fabian Segovia Segovia">
   <title>Home - The Rapids </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
